# flatmailer

./: AUTHORS  BUGS  HOWTO  Makefile.am  README  configure.ac  flatmailer-2.0.spec  spec
debian/: changelog  config  control  copyright  dirs  flatmailer.install  flatmailer.lintian-overrides  flatmailer.tmpfile  links  postinst  postrm  prerm  rules  templates  watch
debian/logcheck/ignore.d.paranoid/: flatmailer
debian/man/: flatmailer-qmqp.8  flatmailer-smtp.8  flatmailer-smtpd.8  newaliases.1
debian/po/: cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/systemd/: flatmailer.service
doc/: DIAGRAM  Makefile.am  flatmailer-dsn.1  flatmailer-inject.1  flatmailer-queue.8  flatmailer-send.8  flatmailer.7  sendmail.1
go/src/dsn/: main.go
lib/: Makefile.am  address.cc  address.h  argparse.h  autoclose.h  base64.cc  base64.h  canonicalize.cc  canonicalize.h  config_path.cc  config_read.cc  config_readint.cc  config_readlist.cc  config_syserr.cc  configio.h  connect.h  defines.h  errcodes.cc  errcodes.h  forkexec.cc  forkexec.h  hostname.cc  hostname.h  makefield.cc  makefield.h  mergelib.sh  netstring.h  selfpipe.cc  selfpipe.h  setenv.cc  setenv.h  tcpconnect.cc
lib/cli++/: cli++.h  main.cc
protocols/: Makefile.am  protocol.cc  protocol.h  qmqp.cc  smtp.cc  tls_gnutls.cc  tls_none.cc
scripts/: flatmailer-log.run  flatmailer.run  flatmailer.service
src/: Makefile.am  dsn.cc  inject.cc  mailq.cc  queue.cc  send.cc  sendmail.cc  smtpd.cc
test/: Makefile.am  clitest.cc  functions.in
test/tests/: dsn  protocols  send  smtpd
test/tests/inject/: from  message-id  queue  sender
test/tests/queue/: rewrite  validate
